@@ -1,3 +1,10 @@
+1999-08-30  Dave Camp  <campd@oit.edu>
+
+	* gconf/gconf.h: #include gconf-orbit.h.
+
+	* gconf/Makefile.am (gconfinclude_HEADERS): Install gconf-orbit.h,
+	GConf.h
+
 1999-08-29  Dave Camp  <campd@oit.edu>
 
 	* Makefile.am (bin_SCRIPTS): Install gconf-config.
